--- a/03-LearnJS/03-数组翻转.html
+++ b/03-LearnJS/03-数组翻转.html
@@ -44,7 +44,7 @@
     var tmp = 0;
     var count1 = 0;
     for (var i = 0; i < arr3.length; i++) {
-      for (var j = 0; j < arr3.length - i; j++) {
+      for (var j = 0; j < arr3.length - i - 1; j++) {
         // 内部元素交换2个变量的值 前面一个与后面一个数组元素进行比较
         if (arr3[j] < arr3[j + 1]) {
           count1++;
