increase: jQuery中的hover方法以及停止动画排队stop()

--- a/11-LearnJQuery/14-新浪下拉菜单案例(停止动画排队).html
+++ b/11-LearnJQuery/14-新浪下拉菜单案例(停止动画排队).html
@@ -156,7 +156,9 @@
       // 3. 事件切换 如果只写一个函数
       $(".nav>li").hover(
         function () {
-          $(this).children("ul").slideToggle(200);
+          // stop(): 停止动画排队
+          // 写在动画前面
+          $(this).children("ul").stop().slideToggle(200);
         }
       )
 
