feat: Object.defineProperty() 定义新属性或修改原有属性

--- a/04-LearnJS/12-倒计时案例.html
+++ b/04-LearnJS/12-倒计时案例.html
@@ -37,6 +37,8 @@
     // 晚上六点
     console.log(countDown('2020-4-30 18:00:00'));
     console.log(new Date());
+    var time1 = new Date('2019-11-11').getTime();
+    console.log(new Date(time1).Format('yyyy-MM-dd'));
   </script>
 </head>
 
