--- a/14-LearnJSAdvance/17-filter筛选数组.html
+++ b/14-LearnJSAdvance/17-filter筛选数组.html
@@ -9,17 +9,20 @@
 
 <body>
   <script>
-    // 1. filter 筛选数组
-    // 返回: 一个新数组
+    /** 
+     * filter 
+     * @document 使用某些条件筛选数组
+     * @return   新数组，由满足条件的元素组成
+     **/
     var arr = [12, 33, 43, 5, 34];
-    /* (1) 将数组中大于20的数选取出来 */
+    // 1. 将数组中大于20的数选取出来
     // 因为返回新数组 所以需要一个数组接收
     var newArr = arr.filter(function (value, index, array) {
       // 参数列表与 forEach 相同
       return value >= 20;
     })
 
-    /* (2) 将数组中的偶数选取出来 */
+    // 2. 将数组中的偶数选取出来
     var newArr2 = arr.filter(function (value, index, array) {
       // 参数列表与 forEach 相同
       return value % 2 === 0;
