--- a/06-LearnDom/07-H5新增自定义属性.html
+++ b/06-LearnDom/07-H5新增自定义属性.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>07-H5新增自定义属性</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>07-H5新增自定义属性</title>
-</head>
+  <body>
+    <div getTime="20" data-index="2" data-list-name="shifeng"></div>
+    <script>
+      var div = document.querySelector('div')
+      console.log(div.getAttribute('getTime'))
 
-<body>
-  <div getTime="20" data-index="2" data-list-name="shifeng"></div>
-  <script>
-    var div = document.querySelector('div');
-    console.log(div.getAttribute('getTime'));
+      div.setAttribute('data-time', 100)
+      console.log(div.getAttribute('data-index'))
 
-    div.setAttribute('data-time', 100);
-    console.log(div.getAttribute('data-index'));
-
-    // 1. h5新增的获取自定义属性的方法
-    // dataset 是一个集合 存放了所有以data开头的自定义属性
-    console.log(div.dataset);
-    console.log(div.dataset.index);
-    console.log(div.dataset['index']);
-    // 如果自定义属性里面有多个-链接的单词，我们获取的时候采取 驼峰命名
-    console.log(div.dataset.listName);
-    console.log(div.dataset['listName']);
-  </script>
-</body>
-
+      // 1. h5新增的获取自定义属性的方法
+      // dataset 是一个集合 存放了所有以data开头的自定义属性
+      console.log(div.dataset)
+      console.log(div.dataset.index)
+      console.log(div.dataset['index'])
+      // 如果自定义属性里面有多个-链接的单词，我们获取的时候采取 驼峰命名
+      console.log(div.dataset.listName)
+      console.log(div.dataset['listName'])
+    </script>
+  </body>
 </html>
